<resources>
    <string name="app_name">BudgetTracker</string>
    <string name="amount_hint">Amount</string>
    <string name="description_hint">Description</string>
    <string name="date_hint">Date (mm-dd-yyyy)</string>
    <string name="essential">Essential</string>
    <string name="non_essential">Non-essential</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">CynpZTN2rPwcGTRFzRr7fktS6T5mH7UtB0zdEt7c</string>
    <string name="back4app_client_key">y9ijzBWriOoiG9Rf48qk2mzitz765Up9gNRXAIud</string>
    <string name="income">Income</string>
    <string name="non_income">Non-income</string>
    <string name="click_here_to_scan">Click here to Scan</string>

</resources>