<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertFragment">

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editText_amount"
        app:layout_constraintTop_toBottomOf="@+id/editText_amount" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/editText_description"
        app:layout_constraintTop_toBottomOf="@+id/editText_description" />

    <ImageButton
        android:id="@+id/imageButton_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintBottom_toBottomOf="@+id/editText_date"
        app:layout_constraintStart_toEndOf="@+id/editText_date"
        tools:src="@drawable/ic_baseline_calendar_today_24" />

    <RadioGroup
        android:id="@+id/radioGroup_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-27dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/radioButton_essential"
        app:layout_constraintStart_toStartOf="@+id/editText_date"
        app:layout_constraintTop_toBottomOf="@+id/editText_date">

        <RadioButton
            android:id="@+id/radioButton_essential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/essential" />

        <RadioButton
            android:id="@+id/radioButton_non_essential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_essential" />
    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_transaction_type" />

    <ImageButton
        android:id="@+id/imageButton_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_box_24"
        app:layout_constraintEnd_toStartOf="@+id/editText_amount"
        app:layout_constraintTop_toTopOf="@+id/editText_amount"
        tools:src="@drawable/ic_baseline_add_box_24" />

</androidx.constraintlayout.widget.ConstraintLayout>